# crimson-eagle-sudoku

./: Cargo.toml  Dioxus.toml  README.md  tailwind.config.js
src/: main.rs
src/components/: home.rs  puzzle.rs  route.rs  statistics.rs  sudoku.rs
src/theme/: style.css
