[package]
name = "crimson-eagle-sudoku"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus = { version = "0.4.0" }
dioxus-fullstack = { version = "0.4.0", features = ["router"] }
dioxus-router = { version = "0.4.0" }
dioxus-web = { version = "0.4.0", features = ["hydrate"], optional = true }
axum = { version = "0.6.12", optional = true }
serde = { version = "1.0.159", features = ["derive"] }
tokio = { version = "1.16.1", features = ["full"], optional = true }

[features]
default = []
ssr = ["axum", "dioxus-fullstack/axum"]
web = ["dioxus-fullstack/web", "dioxus-router/web"]
